# LogFileProcessor

./: CMakeLists.txt  LogProcessor.cpp  LogProcessor.h  README.md  log_data.db  logfile.db  logs.db  main.cpp
